crates/path-cli/tests/snapshots/render_md_snapshots__render_md_step_01_minimal.snap
---
source: crates/path-cli/tests/render_md_snapshots.rs
expression: "render_md(\"step-01-minimal.json\")"
---
# path-step-001

**Head:** `step-001`
**Changes:** +1 −1 across 1 files
**Steps:** 1 | **Artifacts:** 1 | **Dead ends:** 0

## Timeline

### step-001 — human:alex [head]

**Timestamp:** 2026-01-29T10:00:00Z

- `src/main.rs` (+1 -1)
