crates/path-cli/tests/snapshots/render_md_snapshots__render_md_step_03_formatter.snap
---
source: crates/path-cli/tests/render_md_snapshots.rs
expression: "render_md(\"step-03-formatter.json\")"
---
# path-step-003

**Head:** `step-003`
**Changes:** +8 −3 across 1 files
**Steps:** 1 | **Artifacts:** 1 | **Dead ends:** 0

## Timeline

### step-003 — tool:rustfmt/1.7.0 [head]

**Timestamp:** 2026-01-29T10:05:30Z
**Parents:** `step-002`

> Automatic code formatting

- `src/auth/validator.rs` (+8 -3)
