crates/path-cli/tests/snapshots/render_md_snapshots__render_md_step_04_human_refinement.snap
---
source: crates/path-cli/tests/render_md_snapshots.rs
expression: "render_md(\"step-04-human-refinement.json\")"
---
# path-step-004

**Head:** `step-004`
**Changes:** +2 −2 across 1 files
**Steps:** 1 | **Artifacts:** 1 | **Dead ends:** 0

## Timeline

### step-004 — human:alex [head]

**Timestamp:** 2026-01-29T10:15:00Z
**Parents:** `step-003`

> Improve error message clarity and use idiomatic .into()

- **refines:** `toolpath://step-002`

- `src/auth/validator.rs` (+2 -2, rust.modify_expressions)
