crates/path-cli/tests/snapshots/render_md_snapshots__render_md_step_05_dead_end.snap
---
source: crates/path-cli/tests/render_md_snapshots.rs
expression: "render_md(\"step-05-dead-end.json\")"
---
# path-step-002a

**Head:** `step-002a`
**Changes:** +12 −0 across 1 files
**Steps:** 1 | **Artifacts:** 1 | **Dead ends:** 0

## Timeline

### step-002a — agent:claude-code/session-abc123 [head]

**Timestamp:** 2026-01-29T10:03:00Z
**Parents:** `step-001`

> Validate email addresses using regex pattern matching

- `src/auth/validator.rs` (+12 -0, rust.add_items)
